--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "express": "^4.15.2",
     "graceful-fs": "^4.1.11",
     "mdi": "^1.9.33"
